=== (new)

* filter password from logs [Jordan Brough]

* fix incorrect rails gem reference in config/environment.rb [Jamis Buck]

* fix reference to ~/.bucketwise/Capfile so it only loads if the file exists [Jamis Buck]


=== 1.0.0 / 20 Apr 2009

* First release